admin-api-serverの調整

--- a/apps/admin-api-server/env.example
+++ b/apps/admin-api-server/env.example
@@ -1,5 +1,7 @@
 # あなたの API サーバーの公開 URL（ngrok / Cloudflare トンネルなど）
 APP_URL=https://your-api-host.example.com
+# あなたの店舗のロケーションID
+DEFAULT_LOCATION_ID=gid://shopify/Location/xxxxxxxxxxxxxx
 
 # Shopify 管理画面で作ったカスタムアプリのクレデンシャル
 SHOPIFY_API_KEY=your_app_api_key
