--- a/env.example
+++ b/env.example
@@ -1,3 +1,5 @@
 
 SHOPIFY_SHOP_DOMAIN=your-shop.myshopify.com
 SHOPIFY_ADMIN_TOKEN=xxxxx
+# あなたの店舗のロケーションID
+DEFAULT_LOCATION_ID=gid://shopify/Location/xxxxxxxx
